checkstyle fixed and home page added